// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic hello {'world'} ! 1`] = `
Object {
  "body": Object {
    "end": 17,
    "items": Array [
      Object {
        "end": 6,
        "loc": Object {
          "end": Object {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hello ",
      },
      Object {
        "end": 15,
        "loc": Object {
          "end": Object {
            "column": 16,
            "line": 1,
            "offset": 15,
          },
          "start": Object {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "start": 6,
        "type": 9,
        "value": "world",
      },
      Object {
        "end": 17,
        "loc": Object {
          "end": Object {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
          "start": Object {
            "column": 16,
            "line": 1,
            "offset": 15,
          },
        },
        "start": 15,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 17,
  "loc": Object {
    "end": Object {
      "column": 18,
      "line": 1,
      "offset": 17,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`emoji hi, {'😺'} ! 1`] = `
Object {
  "body": Object {
    "end": 12,
    "items": Array [
      Object {
        "end": 4,
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      Object {
        "end": 10,
        "loc": Object {
          "end": Object {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "😺",
      },
      Object {
        "end": 12,
        "loc": Object {
          "end": Object {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": Object {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
        },
        "start": 10,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 12,
  "loc": Object {
    "end": Object {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`escapes \\' 1`] = `
Object {
  "body": Object {
    "end": 12,
    "items": Array [
      Object {
        "end": 4,
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      Object {
        "end": 10,
        "loc": Object {
          "end": Object {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "\\\\'",
      },
      Object {
        "end": 12,
        "loc": Object {
          "end": Object {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": Object {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
        },
        "start": 10,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 12,
  "loc": Object {
    "end": Object {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`escapes \\\\ 1`] = `
Object {
  "body": Object {
    "end": 12,
    "items": Array [
      Object {
        "end": 4,
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      Object {
        "end": 10,
        "loc": Object {
          "end": Object {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "\\\\\\\\",
      },
      Object {
        "end": 12,
        "loc": Object {
          "end": Object {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": Object {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
        },
        "start": 10,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 12,
  "loc": Object {
    "end": Object {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`escapes \\U01F602 1`] = `
Object {
  "body": Object {
    "end": 18,
    "items": Array [
      Object {
        "end": 4,
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      Object {
        "end": 16,
        "loc": Object {
          "end": Object {
            "column": 17,
            "line": 1,
            "offset": 16,
          },
          "start": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "\\\\U01F602",
      },
      Object {
        "end": 18,
        "loc": Object {
          "end": Object {
            "column": 19,
            "line": 1,
            "offset": 18,
          },
          "start": Object {
            "column": 17,
            "line": 1,
            "offset": 16,
          },
        },
        "start": 16,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 19,
        "line": 1,
        "offset": 18,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 18,
  "loc": Object {
    "end": Object {
      "column": 19,
      "line": 1,
      "offset": 18,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`escapes \\u0041 1`] = `
Object {
  "body": Object {
    "end": 16,
    "items": Array [
      Object {
        "end": 4,
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      Object {
        "end": 14,
        "loc": Object {
          "end": Object {
            "column": 15,
            "line": 1,
            "offset": 14,
          },
          "start": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "\\\\u0041",
      },
      Object {
        "end": 16,
        "loc": Object {
          "end": Object {
            "column": 17,
            "line": 1,
            "offset": 16,
          },
          "start": Object {
            "column": 15,
            "line": 1,
            "offset": 14,
          },
        },
        "start": 14,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 1,
        "offset": 16,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 16,
  "loc": Object {
    "end": Object {
      "column": 17,
      "line": 1,
      "offset": 16,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`intlify message syntax special characters % 1`] = `
Object {
  "body": Object {
    "end": 11,
    "items": Array [
      Object {
        "end": 4,
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      Object {
        "end": 9,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "%",
      },
      Object {
        "end": 11,
        "loc": Object {
          "end": Object {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": Object {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "start": 9,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": Object {
    "end": Object {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`intlify message syntax special characters @ 1`] = `
Object {
  "body": Object {
    "end": 11,
    "items": Array [
      Object {
        "end": 4,
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      Object {
        "end": 9,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "@",
      },
      Object {
        "end": 11,
        "loc": Object {
          "end": Object {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": Object {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "start": 9,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": Object {
    "end": Object {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`intlify message syntax special characters { 1`] = `
Object {
  "body": Object {
    "end": 11,
    "items": Array [
      Object {
        "end": 4,
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      Object {
        "end": 9,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "{",
      },
      Object {
        "end": 11,
        "loc": Object {
          "end": Object {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": Object {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "start": 9,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": Object {
    "end": Object {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`intlify message syntax special characters | 1`] = `
Object {
  "body": Object {
    "end": 11,
    "items": Array [
      Object {
        "end": 4,
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      Object {
        "end": 9,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "|",
      },
      Object {
        "end": 11,
        "loc": Object {
          "end": Object {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": Object {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "start": 9,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": Object {
    "end": Object {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`intlify message syntax special characters } 1`] = `
Object {
  "body": Object {
    "end": 11,
    "items": Array [
      Object {
        "end": 4,
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      Object {
        "end": 9,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "}",
      },
      Object {
        "end": 11,
        "loc": Object {
          "end": Object {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": Object {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "start": 9,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": Object {
    "end": Object {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`multi bytes こんにちは、{'世界'}！ 1`] = `
Object {
  "body": Object {
    "end": 13,
    "items": Array [
      Object {
        "end": 6,
        "loc": Object {
          "end": Object {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "こんにちは、",
      },
      Object {
        "end": 12,
        "loc": Object {
          "end": Object {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": Object {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "start": 6,
        "type": 9,
        "value": "世界",
      },
      Object {
        "end": 13,
        "loc": Object {
          "end": Object {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "start": Object {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
        },
        "start": 12,
        "type": 3,
        "value": "！",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 13,
  "loc": Object {
    "end": Object {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`other special characters !#%^&*()-_+=[]:;?.<>" 1`] = `
Object {
  "body": Object {
    "end": 32,
    "items": Array [
      Object {
        "end": 4,
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      Object {
        "end": 30,
        "loc": Object {
          "end": Object {
            "column": 31,
            "line": 1,
            "offset": 30,
          },
          "start": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "!#%^&*()-_+=[]:;?.<>\\"\`",
      },
      Object {
        "end": 32,
        "loc": Object {
          "end": Object {
            "column": 33,
            "line": 1,
            "offset": 32,
          },
          "start": Object {
            "column": 31,
            "line": 1,
            "offset": 30,
          },
        },
        "start": 30,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 33,
        "line": 1,
        "offset": 32,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 32,
  "loc": Object {
    "end": Object {
      "column": 33,
      "line": 1,
      "offset": 32,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`unicode 4 digits 1`] = `
Object {
  "body": Object {
    "end": 11,
    "items": Array [
      Object {
        "end": 4,
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      Object {
        "end": 9,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "A",
      },
      Object {
        "end": 11,
        "loc": Object {
          "end": Object {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": Object {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "start": 9,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": Object {
    "end": Object {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`unicode 6 digits 1`] = `
Object {
  "body": Object {
    "end": 17,
    "items": Array [
      Object {
        "end": 4,
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      Object {
        "end": 15,
        "loc": Object {
          "end": Object {
            "column": 16,
            "line": 1,
            "offset": 15,
          },
          "start": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "U01F602",
      },
      Object {
        "end": 17,
        "loc": Object {
          "end": Object {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
          "start": Object {
            "column": 16,
            "line": 1,
            "offset": 15,
          },
        },
        "start": 15,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 17,
  "loc": Object {
    "end": Object {
      "column": 18,
      "line": 1,
      "offset": 17,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;
